--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -28,14 +28,15 @@ scripts:
     mobx_build_clean: $clean & $get & $runner build --delete-conflicting-outputs
 
 environment:
-  sdk: ">=2.7.0 <3.0.0"
+  sdk: ">=2.12.0-0 <3.0.0"
 
 dependencies:
+  json_annotation: ^4.0.0
   lazy_load_scrollview: ^1.2.0
-  dartz: ^0.9.2
+  dartz: ^0.10.0-nullsafety.1
   dio: ^3.0.10
-  bot_toast: ^3.0.5
-  flutter_modular: ^3.0.0-nullsafety.22
+  bot_toast: ^4.0.0+1
+  flutter_modular: ^3.0.0-nullsafety.45
   flutter_mobx: ^1.1.0+2
   mobx: ^1.2.1+4
   flutter:
@@ -46,6 +47,7 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
 
 dev_dependencies:
+  json_serializable: ^4.0.1
   mobx_codegen: ^1.1.2
   build_runner: any
   flutter_test:
